# chainplate

./: .dockerignore  .eslintcache  .gitignore  0_mcp_tool_list.txt  1_mcp_plan.txt  AGENT_LOOP.md  Dockerfile  README.md  SPEC.md  agent_instructions.local.txt  aixml.xsd  chainplate.db  chainplate.db-shm  chainplate.db-wal  dump.txt  electron.vite.config.ts  logs.db  notion_tool_list.txt  package-lock.json  package.json  pipeline_output!  pyproject.toml  requirements.txt  tool_selection.txt  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts  world_description.txt
.github/instructions/: chainplate.instructions.md
.github/workflows/: main.yml
.spec/: production_readiness_check.md
agent/: plan.txt
data/agent/: context.txt  goals.txt  plan.txt  working_memory.txt
examples/: apply-labels.xml  chat.xml  continue_if.xml  hello-world.xml  interpret_as_bool.xml  interpret_as_integer.xml  mcp_generate_plan.xml  refine_prompt.xml  send_prompt.xml  user_input.xml  while_loop.xml
examples/core_language/: for_loop.xml  payload.xml
examples/elements/: apply-labels.xml  chat.xml  continue_if.xml  extract-list.xml  for_loop.xml  foreach_loop.xml  get-context.xml  get_user_input.xml  interpret-as-json.xml  interpret_as_bool.xml  interpret_as_integer.xml  mcp-invoke.xml  mcp-is-ready.xml  mcp-list-tools.xml  payload.xml  read_file.xml  refine_prompt.xml  send_prompt.xml  set_payload.xml  set_variable.xml  store-memory.xml  trace.xml  while_loop.xml  with_memory.xml  write_to_file.xml
examples/gpt_generated/: joke_generator.xml  test1.xml  text_adventure.xml
examples/input/: spain.txt
examples/mcp/: create-us-cities-page.xml  dog-breeds.xml  extract-tool.xml  fetch-and-notion.xml  fetch.xml  mcp-invoke.xml  mcp-list-tools.xml  mcp-multi-step.xml  mcp-workflow.xml
examples/metaprompting/: prompt_enhancer.xml
examples/misc/: file-append.xml  resume_generator.xml  world-builder.xml
examples/miscellaneous/: fragrance_generator.xml
logs/mcp/: config.json
mcp/: config.json
src/aixml/: __main__.py  ainode.py  core.py  message.py
src/chainplate/: __main__.py  ainode.py  config.py  core.py  db.py  exceptions.py  execution_context.py  message.py  message_update.py
src/main/: index.ts  (+7 more)
tests/: conftest.py  test_ainode.py  test_boolean_helper.py  test_message.py  test_template_helper.py  test_tree.py  test_write_to_file_element.py
(+160 files in other folders)
