[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aixml"
version = "0.1.0"
description = "Tools for working with AI-flavored XML (example)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["xml", "ai", "parsing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  # "lxml>=5.0",  # add real deps here as needed
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "black>=24.0"]

[project.urls]
Homepage = "https://example.com/aixml"
Repository = "https://example.com/aixml/repo"
Issues = "https://example.com/aixml/issues"

# Optional: a console command `aixml` that runs main()
[project.scripts]
aixml = "aixml.__main__:main"

# Include non-code files if you have any (e.g., schemas/)
[tool.hatch.build]
include = [
  "src/aixml/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aixml"]