[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "chainplate"
version = "0.1.0"
description = "XML-based AI workflow tool for chat and agentic applications."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Matthew Holliday", email = "matthewjacobholliday@gmail.com" }]
keywords = ["xml", "ai", "parsing","agent","chatbot","workflow", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  # "lxml>=5.0",  # add real deps here as needed
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "black>=24.0"]

[project.urls]
Homepage = "https://example.com/aixml"
Repository = "https://github.com/matthewholliday/chainplate"
Issues = "https://github.com/matthewholliday/chainplate/issues"

[project.scripts]
chainplate = "chainplate.__main__:main"

# Include non-code files if you have any (e.g., schemas/)
[tool.hatch.build]
include = [
  "src/chainplate/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chainplate"]